# whiskeyjack-bot

./: .gitattributes  .gitignore  .gitleaksignore  .~lock.whiskeyjack-bot-v1-backlog.xlsx#  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CODEX_HANDOFF.md  CODEX_PROMPT.md  FORECASTER.md  GPT_REVIEW_REQUEST_M1-201.md  GPT_REVIEW_REQUEST_M1-201_R2.md  GPT_REVIEW_REQUEST_M1-202.md  GPT_REVIEW_REQUEST_M1-203.md  GPT_REVIEW_REQUEST_M1-203_R2.md  GPT_REVIEW_REQUEST_M1-203_R3.md  GPT_REVIEW_REQUEST_M1-301.md  GPT_REVIEW_REQUEST_M1-302.md  GPT_REVIEW_REQUEST_M1-305.md  GPT_REVIEW_REQUEST_M1-305_R2.md  GPT_REVIEW_REQUEST_M1-305_R3.md  GPT_REVIEW_REQUEST_M1-305_R4.md  GPT_REVIEW_REQUEST_M1-305_R5.md  GPT_REVIEW_REQUEST_M1-401.md  GPT_REVIEW_REQUEST_M1-601.md  GPT_REVIEW_RESPONSE_M1-201_R1.md  GPT_REVIEW_RESPONSE_M1-201_R2.md  GPT_REVIEW_RESPONSE_M1-302_R1.md  GPT_REVIEW_RESPONSE_M1-302_R2.md  GPT_REVIEW_RESPONSE_M1-305_R1.md  GPT_REVIEW_RESPONSE_M1-305_R2.md  GPT_REVIEW_RESPONSE_M1-305_R3.md  GPT_REVIEW_RESPONSE_M1-305_R4.md  LICENSE  README.md  config.example.yaml  pyproject.toml  whiskeyjack-bot-v1-backlog.xlsx  x_accounts.yaml
.github/actions/gitleaks-full-history/: action.yml
.github/scripts/: check-tracked-artifacts.sh
.github/workflows/: ci.yml
docs/: M0-REVIEW.md  M1-202-NOTES.md  M1-301-NOTES.md  M1-305-NOTES.md  M1-401-NOTES.md  M1-NOTES.md
docs/backlog/: backlog.csv  decisions.csv  risks.csv  verified-facts.csv
docs/handoffs/: M0-003-codex-ci-handoff.md
prompts/: forecaster.md
src/whiskeyjack_bot/: __init__.py  cli.py  config.py  env_verify.py  ledger.py  logging_setup.py  prompt.py
src/whiskeyjack_bot/metaculus/: __init__.py  client.py  fetch.py  snapshots.py
src/whiskeyjack_bot/migrations/: 001_initial.sql  002_research_document_fields.sql  __init__.py
src/whiskeyjack_bot/questions/: __init__.py  events.py  groups.py  model.py  normalize.py
src/whiskeyjack_bot/research/: __init__.py  asknews.py  canonical.py  dedup.py  freshness.py  hashing.py  model.py
tests/: conftest.py  test_network_guard.py
tests/fixtures/api_posts/: binary_post.json  multiple_choice_post.json  numeric_post.json
tests/fixtures/api_posts/group/: minibench_group.json
tests/fixtures/snapshots/: minibench_sample_snapshot.json
tests/unit/: conftest.py  test_asknews.py  test_config.py  test_dedup_freshness.py  test_dependency_pins.py  test_env_verify.py  test_fetch.py  test_groups.py  test_ledger.py  test_metaculus_client.py  test_prompt.py  test_questions.py  test_research.py  test_snapshots.py
